<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".LoginScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableStart="@drawable/ic_action_name"
                android:textSize="21sp"
                android:hint="@string/username"
                android:paddingBottom="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                android:paddingTop="2dp" />

            <EditText
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableStart="@drawable/ic_action_password"
                android:textSize="21sp"
                android:hint="@string/password"
                android:paddingBottom="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                android:paddingTop="2dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textSize="22sp"
                android:text="@string/login"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="18dp"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password"/>

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_here_create_account"
                android:textColor="@color/colorBlue"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>